# GlobalSearch

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
MainProj/: CMakeLists.txt  Dot.cpp  Dot.h  DotN.cpp  DotN.h  GlobalSearch.cpp  GlobalSearch.h  GlobalSearchM.cpp  GlobalSearchM.h  main.cpp
Projects/Multidimensional/: CMakeLists.txt  DotN.cpp  DotN.h  GlobalSearchM.cpp  GlobalSearchM.h  main.cpp
Projects/One-dimensional/: CMakeLists.txt  Dot.h  GlobalSearch.cpp  GlobalSearch.h  main.cpp
Projects/ParallelMultidimensional/: CMakeLists.txt  DotNParallel.cpp  DotNParallel.h  GlobalSearchMParallel.cpp  GlobalSearchMParallel.h  main.cpp
Projects/ParallelMultidimensionalOptimal/: CMakeLists.txt  DotNParallel.h  GlobalSearchMParallel.cpp  GlobalSearchMParallel.h  IntervalNParallel.h  intervalNParallel.cpp  main.cpp
